--- a/src/app/containers/teachers/teacher-card/teacher-card.component.html
+++ b/src/app/containers/teachers/teacher-card/teacher-card.component.html
@@ -2,7 +2,7 @@
     <div class="stripe"></div>
     
     <mat-card-header>
-        <img mat-card-avatar [src]="avatarImg">
+        <img mat-card-avatar src="{{avatarImg}}">
         <mat-card-title>
             <div class="title-name">{{teacher.firstname}}</div>
             <div class="title-lastname">{{teacher.lastname}}</div>
