--- a/src/app/containers/teachers/teacher-create/teacher-create.component.html
+++ b/src/app/containers/teachers/teacher-create/teacher-create.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <div class="stripe"></div>
     <mat-card-header>
-        <img mat-card-avatar [src]='avatarImg'>
+        <img mat-card-avatar src='{{avatarImg}}'>
         <mat-card-title>
             <div class="title-name">{{name.value}}</div>
             <div class="title-lastname">{{surname.value}}</div>
