--- a/src/app/pages/students/add-student/add-student.component.html
+++ b/src/app/pages/students/add-student/add-student.component.html
@@ -17,7 +17,7 @@
         <div class="avatar">
           <label (click)="imageInput.click()"
             ><img
-              [src]="studentAvatar"
+              src="{{studentAvatar}}"
               alt="Upload avatar"
               class="avatar-img"
             />
