--- a/src/app/pages/students/student-detail/student-detail.component.html
+++ b/src/app/pages/students/student-detail/student-detail.component.html
@@ -8,7 +8,7 @@
       
         <label (click)="imageInput.click()"
           ><img
-            [src]="studentAvatar"
+            src="{{studentAvatar}}"
             alt="Upload avatar"
             class="avatar-img"
           />
