--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -17,8 +17,8 @@
             </mat-form-field>
             <mat-radio-group (change)="setChartType($event.value)">
               <mat-radio-button value="bar" checked>Стовпці</mat-radio-button>
-              <mat-radio-button value="pie">Пиріг</mat-radio-button>
-              <mat-radio-button value="doughnut">Пончик</mat-radio-button>
+              <mat-radio-button value="pie">Диск</mat-radio-button>
+              <mat-radio-button value="doughnut">Кiльце</mat-radio-button>
             </mat-radio-group>
           </div>
         </div>
