--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -26,12 +26,12 @@
 
           <div class="chart-container">
             <canvas baseChart
-                    [data]="chartObj.data$ | async"
-                    [labels]="chartObj.labels$ | async"
-                    [options]="chartObj.options$ | async"
-                    [legend]="chartObj.legend$ | async"
-                    [chartType]="chartObj.chartType$ | async"
-                    [colors]="chartObj.colors$ | async"></canvas>
+                    [data]="chartObj.data"
+                    [labels]="chartObj.labels"
+                    [options]="chartObj.options"
+                    [legend]="chartObj.legend"
+                    [chartType]="chartObj.type"
+                    [colors]="chartObj.colors"></canvas>
           </div>
         </div>
       </div>
