provided autocomplete for all the controls of the form

--- a/src/app/containers/schedule/daily-schedule/daily-schedule.component.html
+++ b/src/app/containers/schedule/daily-schedule/daily-schedule.component.html
@@ -1,30 +1,27 @@
 <form [formGroup]="dailySchedule">
   <legend>{{legendDay}}</legend>
-  <div *ngFor="let lesson of dailySchedule.controls; let lessonNumber=index">
+  <div *ngFor="let lesson of dailySchedule.controls; let lessonNumber=index" class="lesson-div">
     <span>{{ lessonNumber + 1 }}. </span>
-    <div class="lesson-field">
-      <mat-form-field>
-        <mat-select [formControl]="lesson.get('firstGroup')" (selectionChange)="addLesson(lessonNumber)"
-          placeholder="Предмет">
-          <mat-option *ngFor="let subject of subjectsTemp$ | async" [value]="subject">
-            {{ subject.subjectName }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+    <div class="lesson-info-div">
       <div class="lesson-field">
-        <mat-form-field *ngIf="firstGroupTeachersVisible[lessonNumber]">
-          <mat-select [formControl]="lesson.get('firstGroupTeacher')" placeholder="Вчитель">
-            <mat-option *ngFor="let teacher of teachers" [value]="teacher">
-              {{ teacher.fullName }}
+        <mat-form-field>
+          <input type="text" placeholder="Предмет" matInput [formControl]="lesson.get('firstGroup')"
+            [matAutocomplete]="subject1">
+          <mat-autocomplete #subject1="matAutocomplete" [displayWith]="displaySubjectFn"
+            (optionSelected)="addLesson(lessonNumber)">
+            <mat-option *ngFor="let subject of filteredSubjectsFirstGroup | async" [value]="subject">
+              {{ subject.subjectName }}
             </mat-option>
-          </mat-select>
-          <!-- <input type="text" placeholder="Вчитель" matInput [formControl]="lesson.controls.firstGroupTeacher" [matAutocomplete]="teacherA">
-              <mat-autocomplete #teacherA="matAutocomplete">
-                   [displayWith]="displayFn" 
-                <mat-option *ngFor="let teacher of filteredTeachers | async" [value]="teacher">
-                  {{teacher}}
-                </mat-option>
-              </mat-autocomplete> -->
+          </mat-autocomplete>
+        </mat-form-field>
+        <mat-form-field *ngIf="firstGroupTeachersVisible[lessonNumber]">
+          <input type="text" placeholder="Вчитель" matInput [formControl]="lesson.get('firstGroupTeacher')"
+            [matAutocomplete]="teacher1">
+          <mat-autocomplete #teacher1="matAutocomplete" [displayWith]="displayTeacherFn">
+            <mat-option *ngFor="let teacher of filteredTeachersFirstGroup | async" [value]="teacher">
+              {{teacher.fullName}}
+            </mat-option>
+          </mat-autocomplete>
         </mat-form-field>
         <button mat-icon-button type="button" (click)="addTeacherToLesson(lessonNumber, 'first')"
           *ngIf="lesson.get('firstGroup').value && !firstGroupTeachersVisible[lessonNumber]">
@@ -37,26 +34,23 @@
       </div>
       <div class="lesson-field" *ngIf="secondGroupVisible[lessonNumber]">
         <mat-form-field>
-          <mat-select [formControl]="lesson.get('secondGroup')" placeholder="Предмет">
-            <mat-option *ngFor="let subject of subjectsTemp$ | async" [value]="subject">
+          <input type="text" placeholder="Предмет" matInput [formControl]="lesson.get('secondGroup')"
+            [matAutocomplete]="subject2">
+          <mat-autocomplete #subject2="matAutocomplete" [displayWith]="displaySubjectFn">
+            <mat-option *ngFor="let subject of filteredSubjectsSecondGroup | async" [value]="subject">
               {{ subject.subjectName }}
             </mat-option>
-          </mat-select>
+          </mat-autocomplete>
         </mat-form-field>
 
         <mat-form-field *ngIf="secondGroupTeachersVisible[lessonNumber]">
-          <mat-select [formControl]="lesson.get('secondGroupTeacher')" placeholder="Вчитель">
-            <mat-option *ngFor="let teacher of teachers" [value]="teacher">
-              {{ teacher.fullName }}
+          <input type="text" placeholder="Вчитель" matInput [formControl]="lesson.get('secondGroupTeacher')"
+            [matAutocomplete]="teacher2">
+          <mat-autocomplete #teacher2="matAutocomplete" [displayWith]="displayTeacherFn">
+            <mat-option *ngFor="let teacher of filteredTeachersSecondGroup | async" [value]="teacher">
+              {{teacher.fullName}}
             </mat-option>
-          </mat-select>
-          <!-- <input type="text" placeholder="Вчитель" matInput [formControl]="lesson.controls.firstGroupTeacher" [matAutocomplete]="teacherA">
-              <mat-autocomplete #teacherA="matAutocomplete">
-                   [displayWith]="displayFn" 
-                <mat-option *ngFor="let teacher of filteredTeachers | async" [value]="teacher">
-                  {{teacher}}
-                </mat-option>
-              </mat-autocomplete> -->
+          </mat-autocomplete>
         </mat-form-field>
         <button mat-icon-button type="button" (click)="addTeacherToLesson(lessonNumber, 'second')"
           *ngIf="lesson.get('secondGroup').value && !secondGroupTeachersVisible[lessonNumber]">
@@ -76,14 +70,13 @@
         *ngIf="secondGroupVisible[lessonNumber]">
         <mat-icon class="remove">delete</mat-icon>
       </button>
-    </div>
-
-    <div class="lesson-field">
-      <button mat-icon-button type="button" (click)="removeLesson(lessonNumber)" *ngIf="(lessonNumber !== 0 && 
+      <div class="lesson-field">
+        <button mat-icon-button type="button" (click)="removeLesson(lessonNumber)" *ngIf="(lessonNumber !== 0 && 
                 lessonNumber !== (dailySchedule.controls.length - 1)) ||
                 lessonNumber === 7 && dailySchedule.value[lessonNumber].firstGroup">
-        <mat-icon class="remove">remove</mat-icon>
-      </button>
+          <mat-icon class="remove">remove</mat-icon>
+        </button>
+      </div>
     </div>
   </div>
 </form>
