--- a/src/app/containers/schedule/schedule.component.scss
+++ b/src/app/containers/schedule/schedule.component.scss
@@ -14,3 +14,21 @@ mat-panel-title {
 mat-form-field {
     margin: 5px;
 }
+
+.term-class-year-div {
+    margin-bottom: 10px;
+}
+
+.term-div {
+    display: inline-block;
+}
+
+.date-div {
+    font-size: 12px;
+    color: #aaa;
+    margin: 0 10px 10px 10px;
+}
+
+button[type="submit"] {
+    margin-top: 10px;
+}
