--- a/src/app/pages/student/student.component.html
+++ b/src/app/pages/student/student.component.html
@@ -2,9 +2,8 @@
 <button
   routerLink="diary"
   mat-raised-button
-  color="primary"
 >
-  Show Diary
+  Щоденник
 </button>
   <router-outlet></router-outlet>
 </webui-header>
